# openyoung

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.rl  README.md  benchmark_results.md  debug_xiaohongshu.html  docker-compose.rl.yml  docker-compose.yml  findings.md  github_import_script.py  mkdocs.yml  performance_regression_check.py  progress.md  pyproject.toml  requirements-rl.txt  task_plan.md
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/agents/: store.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: README.md  swarm-monitor.sh  update-v3-progress.sh  v3-quick-status.sh  v3.sh  validate-v3-config.sh
.github/workflows/: ci.yml
.learnings/: LEARNINGS.md
.openyoung/: lock.yaml  providers.json  registry.json
.swarm/: hnsw.index  hnsw.metadata.json  schema.sql  state.json
benchmarks/: test_sandbox.py
config/: channels.example.yaml  rl.yaml
docs/: benchmark_report.md  code_deduplication_analysis.md  code_quality_analysis.md  code_quality_analysis_v2.md  code_review_data_system.md  data_implementation_plan.md  data_implementation_plan_lightweight.md  data_improvement_plan.md  data_improvement_plan_v2.md  data_improvement_plan_v3.md  datacenter_refactor_final_analysis.md  datacenter_refactor_plan.md  datacenter_refactor_plan_v2.md  eval_plan_integration.md  implementation-plan.md  improvement_plan.md  observability_test_report.md  optimization_plan.md  test_evaluation_report.md
docs/.obsidian/: workspace.json
docs/analysis/: evaluation_issues.md  project-management-app-evaluation-issues.md
docs/api/: index.md
docs/decisions/: 2026-03-16-agent-metadata-decision.md  2026-03-16-core-abstraction-decision.md  2026-03-16-dag-scheduling-decision.md  2026-03-16-exception-hierarchy-decision.md  2026-03-16-harness-engine-decision.md  2026-03-16-layered-config-decision.md  2026-03-16-registry-abstraction-decision.md  2026-03-16-rust-sandbox-ffi-decision.md
docs/design/: agent-design.md  cli-integration-design.md  datacenter-design.md  evaluation-hub-design.md  evolver-design.md  integrat-design.md  package-manager-design.md  unified-skill-retriever-design.md  young-agent-core.md  young-agent-design.md  young-agent-flow.md  young-agent-integration.md  young-agent-memory.md  young-agent-prompt.md
docs/diagrams/: README.md  agent-workflow.excalidraw.md  openyoung-architecture.excalidraw.md
docs/evaluation/: reviewer-test-plan.md  test-evaluation-report.md  user-business-test-plan.md
docs/manuals/: configuration-manual.md  deployment-manual.md  quickstart.md  user-manual.md
docs/peas/: API.md  ARCHITECTURE.md  README.md  README_EN.md  TUTORIAL.md  api-reference.md  architecture-en.md  contribution.md  getting-started.md  index-en.md  index.md
docs/plans/: 2026-03-02-openyoung-complete-implementation.md  2026-03-07-datacenter-unified-design.md  2026-03-07-r2-1-execution-plan.md  2026-03-07-strategic-roadmap-v2.md  2026-03-07-strategic-roadmap.md  2026-03-08-agent-test-plan-design.md  2026-03-08-comprehensive-test-plan.md  2026-03-08-phase11-execution-plan.md  2026-03-08-test-implementation-plan.md  2026-03-09-cli-test-plan.md  2026-03-09-expert-analysis.md  2026-03-09-ironclaw-analysis.md  2026-03-09-security-implementation-v2.md  2026-03-10-external-evaluator-design.md  2026-03-13-phase1-evaluation-platform-design.md  2026-03-13-phase2-agent-enhancement.md  2026-03-13-phase2-phase3-implementation-plan.md  2026-03-13-quality-improvement-plan.md  2026-03-13-quality-improvement-v2.md  2026-03-13-skill-marketplace-design.md  2026-03-14-heterogeneous-rl-system-design.md  2026-03-14-multi-level-prompt-self-evolution-design.md  2026-03-14-sandbox-session-implementation.md  2026-03-15-webui-streamlit-mvp-plan.md  2026-03-17-cli-to-webui-migration-plan-v2.md  2026-03-17-cli-to-webui-migration-plan.md  2026-03-19-plan-execution-alignment.md  2026-03-20-next-steps-analysis.md  2026-03-20-peas-mvp-plan.md  README.md  agent-comparison-badge-version.md  ai-docker-improvement-plan.md  architecture-refactor-phase1.md  core-reliability-improvement.md  (+36 more)
evals/: evals.json
examples/: di_example.py  output_report.md  peas_report_generator.py  peas_validation_data.json  peas_validation_example.py  project-management-app-report.md  project-management-app-validation.json
findings/: frameworks_analysis.md  integration_analysis.md  market_analysis.md
github-import-workspace/: trigger_eval.json  trigger_eval_results.json
output/: README.md  build.sh  run.sh  test_agents.json  test_license.license.json
rust/ironclaw-sandbox/: Cargo.toml  build.rs
rust/ironclaw-sandbox/proto/: agent_control.proto  evaluator.proto  security.proto
rust/ironclaw-sandbox/src/: agent_service.rs  audit.rs  bindings.rs  circuit_breaker.rs  evaluator.rs  ipc_main.rs  ipc_server.rs  lib.rs  llm_client.rs  llm_middleware.rs  logging.rs  server.rs  simple_ipc.rs
rust/ironclaw-sandbox/src/evaluator/: dimension.rs  iterations.rs  session.rs
scripts/: eval_skill_trigger.py  generate_api_docs.py  monitor_components.py  peas_benchmark.py  prepare_rl_data.py  start_webui.sh  weibo_hot_crawler.py  weibo_hot_simple.py
snake_game/: Cargo.toml  simple_snake.rs
templates/: registry.yaml
tests/: full_flow_test.py  test_config_boundary.py  test_improvements.py  test_sandbox_security.py
webui/: app.py  requirements.txt
(+752 files in other folders)
