[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openyoung"
version = "1.0.0"
description = "OpenYoung AI Agent Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
openyoung = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/mightyoung/openyoung"


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]