[package]
name = "ironclaw-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "ironclaw-server"
path = "src/server.rs"

[[bin]]
name = "ironclaw-ipc"
path = "src/ipc_main.rs"

[[bin]]
name = "simple-ipc"
path = "src/simple_ipc.rs"
